Noteworthy changes in 0.1.0
-----------------------------------------------------------------

    *	Initial release.