@@ -1,12 +1,17 @@
 import distutils.core
 
+long_description = """
+GnuPGInterface is a Python module to interface with GnuPG.
+It concentrates on interacting with GnuPG via filehandles,
+providing access to control GnuPG via versatile and extensible means.
+
+This module is based on GnuPG::Interface, a Perl module by the same author.
+"""
+
 distutils.core.setup( name = 'GnuPGInterface',
                       version = '0.1.0',
                       description = 'GnuPG interactions with file handles',
-		      long_description = """This module allows fairly
-		      low-level IPC communication with GnuPG through
-		      filehandles.  This module does not use GPGME,
-		      which has a higher-level API.""",
+		      long_description = long_description,
                       author = 'Frank J. Tobin',
                       author_email = 'ftobin@users.sourceforge.net',
 		      licence = 'GPL',
